src/bootstrap/test/v0_7/rejects/05_user_redecl_chan/main.zg
# requires: v0.7

struct chan {}
